[gd_scene load_steps=16 format=3 uid="uid://dswoypivjtaql"]

[ext_resource type="Script" uid="uid://ypmkl3x5hk7f" path="res://scenes/main_game/field/field.gd" id="1_4blml"]
[ext_resource type="Texture2D" uid="uid://c1l356n6od8ma" path="res://resources/sprites/objects/field.png" id="1_se4o6"]
[ext_resource type="Script" uid="uid://c42mdjgajw0gi" path="res://scenes/GUI/controls/buttons/gui_basic_button.gd" id="3_u5lh2"]
[ext_resource type="PackedScene" uid="uid://b0mxsb1ypllyg" path="res://scenes/main_game/field/gui_field_selection_arrow.tscn" id="4_50o30"]
[ext_resource type="PackedScene" uid="uid://673wlt1ldg8q" path="res://scenes/GUI/utils/progress_bar/gui_segmented_progress_bar.tscn" id="4_bve5f"]
[ext_resource type="AudioStream" uid="uid://ctu3v3nqwt6d2" path="res://resources/sounds/SFX/field/field_hover.wav" id="4_rw11e"]
[ext_resource type="Texture2D" uid="uid://dxyqfprxbenb6" path="res://resources/sprites/GUI/icons/resources/icon_light.png" id="5_7ysiu"]
[ext_resource type="AudioStream" uid="uid://b00jsu3na1sj0" path="res://resources/sounds/SFX/field/field_click.wav" id="5_37mqm"]
[ext_resource type="Texture2D" uid="uid://ck8xmcukmvwwu" path="res://resources/sprites/GUI/icons/resources/icon_water.png" id="6_bhkj4"]
[ext_resource type="PackedScene" uid="uid://e0jhp4mhrm81" path="res://scenes/main_game/field/gui_field_status_container.tscn" id="9_3ecbu"]
[ext_resource type="PackedScene" uid="uid://jaeock3j73t2" path="res://scenes/main_game/field/gui_plant_ability_icon_container.tscn" id="12_sqga6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rw11e"]
atlas = ExtResource("1_se4o6")
region = Rect2(36, 0, 36, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_37mqm"]
atlas = ExtResource("1_se4o6")
region = Rect2(0, 0, 36, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_vf3h2"]
atlas = ExtResource("1_se4o6")
region = Rect2(0, 22, 36, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_a40ln"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rw11e")
}],
"loop": false,
"name": &"hover",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_37mqm")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vf3h2")
}],
"loop": false,
"name": &"pressed",
"speed": 10.0
}]

[node name="Field" type="Node2D"]
script = ExtResource("1_4blml")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_a40ln")
animation = &"hover"
metadata/_aseprite_wizard_interface_config_ = {
"output_section": true,
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"layers": [],
"o_ex_p": "",
"o_folder": "res://resources/sprites/objects/",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://resources/sprites/objects/field.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "eb29e2811f205366d75c29df0c7d63a4"

[node name="GUIFieldButton" type="PanelContainer" parent="."]
unique_name_in_owner = true
offset_left = -18.0
offset_top = -11.0
offset_right = 18.0
offset_bottom = 11.0
script = ExtResource("3_u5lh2")
hover_sound = ExtResource("4_rw11e")
click_sound = ExtResource("5_37mqm")
metadata/_custom_type_script = "uid://c42mdjgajw0gi"

[node name="ProgressBars" type="VBoxContainer" parent="."]
unique_name_in_owner = true
offset_left = -18.0
offset_top = -37.0
offset_right = 17.0
offset_bottom = -23.0
theme_override_constants/separation = 0

[node name="LightBar" parent="ProgressBars" instance=ExtResource("4_bve5f")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 7)
layout_mode = 2
max_value = 2
segment_color = Color(1, 0.784314, 0.145098, 1)
icon_texture = ExtResource("5_7ysiu")
icon_size = Vector2(6, 6)

[node name="WaterBar" parent="ProgressBars" instance=ExtResource("4_bve5f")]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 7)
layout_mode = 2
max_value = 5
icon_texture = ExtResource("6_bhkj4")
icon_size = Vector2(6, 6)

[node name="PlantContainer" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -12)

[node name="GUIFieldStatusContainer" parent="." instance=ExtResource("9_3ecbu")]
unique_name_in_owner = true
offset_left = 22.0
offset_top = 11.0
offset_right = 22.0
offset_bottom = 11.0

[node name="GUIPlantAbilityIconContainer" parent="." instance=ExtResource("12_sqga6")]
unique_name_in_owner = true
anchors_preset = 2
anchor_left = 0.0
anchor_right = 0.0
offset_left = -22.0
offset_top = 11.0
offset_right = -22.0
offset_bottom = 11.0
grow_horizontal = 1

[node name="GUIFieldSelectionArrow" parent="." instance=ExtResource("4_50o30")]
unique_name_in_owner = true
offset_top = -45.0
offset_bottom = -45.0
